# AnsimOn-Backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: database.py  settings.py
tests/: test_check.py
